--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/mapbox-sdk": "^0.14.0",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
@@ -20,6 +21,7 @@
     "express-session": "^1.17.1",
     "joi": "^17.2.1",
     "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongoose": "^5.10.4",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
